--- a/Task1/style.css
+++ b/Task1/style.css
@@ -1,33 +1,3 @@
-/*body{
-    margin: 0;
-    padding: 0;
-    background-color: bisque;
-}
-header{
-    font-size: 20px;
-    background-color: rgb(78, 162, 134);
-    height: 6vh;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    <header>DJSCE Student Data</header>
-    <div class="content">
-      <div class="studentsdata">
-        <table>
-          <tr>
-            <td>Cell 1</td>
-            <td>Cell 2</td>
-            <td>Cell 3</td>
-          </tr>
-          
-        </table>
-      </div>
-    </div>
-}*/
-
-
-
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
@@ -112,9 +82,9 @@ button:hover {
     font-size: 12px;
 }
 
-.btn-cancel {
+/*.btn-cancel {
     background-color: #6c757d;
-}
+}*/
 
 table {
     width: 100%;
@@ -136,12 +106,6 @@ th {
 
 tr:nth-child(even) {
     background-color: #f9f9f9;
-}
-
-.loading {
-    text-align: center;
-    padding: 20px;
-    color: #666;
 }
 
 .error {
