--- a/reactloginsignup/src/components/style.css
+++ b/reactloginsignup/src/components/style.css
@@ -143,6 +143,21 @@ body{
   padding-bottom: 2%;
 }
 
+@media (max-width: 500px) {
+  .form-card {
+    padding: 30px 20px;
+  }
+  .loginlabel, .signuplabel {
+    font-size: 1.5rem;
+  }
+  .input {
+    font-size: 0.95rem;
+  }
+  .loginbutton, .signup-button {
+    padding: 0.65rem 1rem;
+  }
+}
+
 
 
 
